Fix issues found by FindBugs.
Remove inefficient "new String(String)" constructor.  Also use
Integer.valueOf() instead of "new Integer".